tests/error/linear_errors/field_copy_nested4.err
Error: Copy violation (at $FILE:23:11)
   | 
21 | def foo(s: MyStruct1 @owned) -> MyStruct1:
22 |     use(s)
23 |     return s
   |            ^ Field `s.x.q` with non-copyable type `qubit` cannot be
   |              returned ...
   | 
22 |     use(s)
   |         - since it was already consumed here

Guppy compilation failed due to 1 previous error
